@@ -1,9 +1,11 @@
  What's New for Links2 PSP Port
 ================================
 
-links-2.1pre22 PSP rxxxx (2006-07-xx)
+links-2.1pre23 PSP rxxxx (2006-07-xx)
 NEW FEATURES
 (raf) Cookie save/restore patch from cvs.pld.org.pl/SOURCES/links2-cookies-save.patch?rev=1.2 applied.
+(raf) Merged to 2.1pre23 See Changelog.orig
+(raf) Made psp_bb_to_fb_factor a configurable parameter in links.cfg (default=1, set to 2 to enable zoom mode)
 BUG FIXES
 (raf) Reverted UP/DOWN behavior (user requested). (R+UP/DOWN still does page up/down, though).
 
